# fast_zero

./: .gitignore  LICENSE  README.md  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: f36a19c44c84_create_users_table.py
tests/: conftest.py  test_app.py  test_auth  test_db.py  test_security.py  test_user.py
